Fixed overflow

--- a/css/game.scss
+++ b/css/game.scss
@@ -7,6 +7,8 @@
     position: relative;
     left: 50%;
     transform: translateX(-50%) translateY(-15px);
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 @include page-path;
